--- a/src/assets/scss/highlight.scss
+++ b/src/assets/scss/highlight.scss
@@ -1,9 +1,16 @@
 html,
 body {
-  height: auto;
+  height: 100vh;
   margin: 0;
   padding: 0;
   font-size: 10px;
+}
+
+#root {
+  height: 100vh;
+  > div {
+
+  }
 }
 
 .btn {
@@ -45,27 +52,27 @@ button[disabled]{
   z-index: 11;
 }
 
-.driver { // 위로 뜨길 원하는 컨텐츠의 최상위 부모. (main태그 바로 아래)
+.highlight { // 위로 뜨길 원하는 컨텐츠의 최상위 부모. (main태그 바로 아래)
   opacity: 1 !important;
   z-index: auto !important;
 }
 
-.driver-highlight-text {
+.highlight-highlight-text {
   position: relative !important;
   color: black;
   transition: all 0.3s;
   z-index: 1004 !important;
 }
 
-.driver-highlight-back {
+.highlight-highlight-back {
   display: none;
   transition: all .3s;
 }
 
 //----------------------//
 
-.driver-box {
-  .driver-start-button {
+.highlight-box {
+  .highlight-start-button {
     div {
       button {
         width: 5rem;
@@ -83,45 +90,45 @@ button[disabled]{
   }
 }
 
-.driver-description-box {
+.highlight-description-box {
   transition: all .3s;
   border-radius: 10px;
 }
 
-.driver-description-text {
+.highlight-description-text {
   display: none;
   padding: 1rem 2rem;
 }
 
-.driver-start-button {
+.highlight-start-button {
   position: fixed;
   bottom: 10rem;
   right: 10rem;
   //z-index: 1003;
 }
 
-.driver-description-button-box {
+.highlight-description-button-box {
   display: none;
   width: 100%;
   margin: 5rem 0 1rem 0;
-  .driver-description-button {
+  .highlight-description-button {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
 }
 
-.driver-test {
+.highlight-test {
   position:absolute;
 }
 
-.driver-title {
+.highlight-title {
   font-size: 1.6rem;
   font-weight: bold;
   border-bottom: .1rem solid #000000;
 }
 
-.driver-desc {
+.highlight-desc {
   padding-top: 1rem;
   font-size: 1.4rem;
 }
@@ -133,6 +140,7 @@ button[disabled]{
   align-items: center;
   justify-content: space-around;
   max-width: 20rem;
+  height: 100%;
   margin: 0 auto;
   background: #000000;
   color: white;
